# mppi_cuda_node

./: CMakeLists.txt  package.xml  setup.py
launch/: lqr.launch  mppi.launch
scripts/: actions_for_open_loop.npy  hex_controller.py  lqr_controller.py  lqr_controller_gravity.py  lqr_node.py  mavlink_transmitter.py  mppi_cuda_node.py  mppi_cuda_node_noisy_working_opt2.py  mppi_cuda_node_working.py  mppi_jax.py  mppi_jax2.py  mppi_numba.py  mppi_numba_fast.py  mppi_numba_gravity.py  mppi_numba_retune.py  mppi_numba_retune_gravity.py  mppi_numba_retune_old.py  mppi_test.py  rl_tuning.py
